--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zeitlich",
   "version": "0.1.0",
-  "description": "An opinionated AI agent implementation for Temporal",
+  "description": "[EXPERIMENTAL] An opinionated AI agent implementation for Temporal",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
