--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build",
     "clean": "rm -rf dist",
-    "prepare": "husky"
+    "prepare": "husky",
+    "release:pr": "release-please release-pr --repo-url=bead-ai/zeitlich --token=$GITHUB_TOKEN",
+    "release:pr:dry": "release-please release-pr --repo-url=bead-ai/zeitlich --token=$GITHUB_TOKEN --dry-run",
+    "release:github": "release-please github-release --repo-url=bead-ai/zeitlich --token=$GITHUB_TOKEN"
   },
   "keywords": [
     "ai",
@@ -63,12 +66,13 @@
     "@eslint/js": "^9.0.0",
     "@temporalio/envconfig": "^1.14.1",
     "@temporalio/worker": "^1.14.1",
-    "@types/node": "^20.11.0",
     "@types/minimatch": "^5.1.2",
+    "@types/node": "^20.11.0",
     "eslint": "^9.0.0",
     "husky": "^9.1.7",
     "ioredis": "^5.9.2",
     "prettier": "^3.2.0",
+    "release-please": "^17.2.0",
     "tsup": "^8.0.0",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.0.0"
