--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@temporalio/common": "^1.14.1",
     "@temporalio/plugin": "^1.14.1",
     "@temporalio/workflow": "^1.14.1",
+    "just-bash": "^2.9.2",
     "minimatch": "^10.1.1",
     "zod": "^4.3.6"
   }
