--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "release-please": "^17.2.0",
     "tsup": "^8.0.0",
     "typescript": "^5.3.0",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "vitest": "^4.0.18"
   },
   "peerDependencies": {
     "ioredis": ">=5.0.0"
