--- a/package.json
+++ b/package.json
@@ -2,29 +2,29 @@
   "name": "zeitlich",
   "version": "0.1.1",
   "description": "[EXPERIMENTAL] An opinionated AI agent implementation for Temporal",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "private": false,
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      },
-      "require": {
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
       }
     },
     "./workflow": {
       "import": {
-        "types": "./dist/workflow.d.mts",
-        "default": "./dist/workflow.mjs"
-      },
-      "require": {
         "types": "./dist/workflow.d.ts",
         "default": "./dist/workflow.js"
+      },
+      "require": {
+        "types": "./dist/workflow.d.cts",
+        "default": "./dist/workflow.cjs"
       }
     }
   },
@@ -70,7 +70,6 @@
     "@eslint/js": "^9.0.0",
     "@temporalio/envconfig": "^1.14.1",
     "@temporalio/worker": "^1.14.1",
-    "@types/minimatch": "^5.1.2",
     "@types/node": "^20.11.0",
     "eslint": "^9.0.0",
     "husky": "^9.1.7",
@@ -85,7 +84,7 @@
   "peerDependencies": {
     "ioredis": ">=5.0.0"
   },
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/bead-ai/zeitlich/issues"
   },
@@ -96,7 +95,6 @@
     "@temporalio/plugin": "^1.14.1",
     "@temporalio/workflow": "^1.14.1",
     "just-bash": "^2.9.2",
-    "minimatch": "^10.1.1",
     "zod": "^4.3.6"
   }
 }
